<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019. Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_blue">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp">

        <ImageView
            android:id="@+id/profile_user_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginLeft="@dimen/workshop_edit_size"
            android:layout_marginStart="@dimen/workshop_edit_size"
            android:layout_marginTop="24dp"
            android:transitionName="user_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/unlock_01_gingerbread_man" />

        <include
            layout="@layout/layout_level_text"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="24dp"
            android:transitionName="level_text"
            app:layout_constraintBottom_toBottomOf="@+id/profile_user_image"
            app:layout_constraintLeft_toRightOf="@+id/profile_user_image"
            app:layout_constraintRight_toLeftOf="@+id/arrow_right"
            app:layout_constraintTop_toTopOf="@+id/profile_user_image" />

        <fragment
            android:id="@+id/map_workshop_1"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="@dimen/workshop_map_height"
            android:layout_marginEnd="@dimen/workshop_map_margin"
            android:layout_marginLeft="@dimen/workshop_map_margin"
            android:layout_marginRight="@dimen/workshop_map_margin"
            android:layout_marginStart="@dimen/workshop_map_margin"
            android:layout_marginTop="@dimen/workshop_map_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_workshops"
            map:liteMode="true" />

        <fragment
            android:id="@+id/map_workshop_2"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="@dimen/workshop_map_height"
            android:layout_marginEnd="@dimen/workshop_map_margin"
            android:layout_marginLeft="@dimen/workshop_map_margin"
            android:layout_marginRight="@dimen/workshop_map_margin"
            android:layout_marginStart="@dimen/workshop_map_margin"
            android:layout_marginTop="@dimen/workshop_map_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/map_workshop_1"
            map:liteMode="true" />

        <fragment
            android:id="@+id/map_workshop_3"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="@dimen/workshop_map_height"
            android:layout_marginEnd="@dimen/workshop_map_margin"
            android:layout_marginLeft="@dimen/workshop_map_margin"
            android:layout_marginRight="@dimen/workshop_map_margin"
            android:layout_marginStart="@dimen/workshop_map_margin"
            android:layout_marginTop="@dimen/workshop_map_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/map_workshop_2"
            map:liteMode="true" />

        <ImageView
            android:id="@+id/button_edit_1"
            style="@style/WorkshopEditButton"
            app:layout_constraintBottom_toBottomOf="@+id/map_workshop_1"
            app:layout_constraintRight_toRightOf="@+id/map_workshop_1"
            app:srcCompat="@drawable/btn_magnet"
            android:layout_height="@dimen/workshop_edit_size"
            android:layout_width="@dimen/workshop_edit_size" />

        <ImageView
            android:id="@+id/button_edit_2"
            style="@style/WorkshopEditButton"
            app:layout_constraintBottom_toBottomOf="@+id/map_workshop_2"
            app:layout_constraintRight_toRightOf="@+id/map_workshop_2"
            app:srcCompat="@drawable/btn_magnet"
            android:layout_height="@dimen/workshop_edit_size"
            android:layout_width="@dimen/workshop_edit_size" />

        <ImageView
            android:id="@+id/button_edit_3"
            style="@style/WorkshopEditButton"
            app:layout_constraintBottom_toBottomOf="@+id/map_workshop_3"
            app:layout_constraintRight_toRightOf="@+id/map_workshop_3"
            app:srcCompat="@drawable/btn_magnet"
            android:layout_height="@dimen/workshop_edit_size"
            android:layout_width="@dimen/workshop_edit_size" />

        <TextView
            android:id="@+id/text_number_1"
            style="@style/TextWorkshopOrnament"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ornament_workshop_1"
            android:text="1"
            app:layout_constraintLeft_toLeftOf="@+id/map_workshop_1"
            app:layout_constraintTop_toTopOf="@+id/map_workshop_1" />

        <TextView
            android:id="@+id/text_number_2"
            style="@style/TextWorkshopOrnament"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ornament_workshop_2"
            android:text="2"
            app:layout_constraintLeft_toLeftOf="@+id/map_workshop_2"
            app:layout_constraintTop_toTopOf="@+id/map_workshop_2" />

        <TextView
            android:id="@+id/text_number_3"
            style="@style/TextWorkshopOrnament"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ornament_workshop_3"
            android:text="3"
            app:layout_constraintLeft_toLeftOf="@+id/map_workshop_3"
            app:layout_constraintTop_toTopOf="@+id/map_workshop_3" />

        <!-- Scrim overlay fork workshop 2 (when locked) -->
        <RelativeLayout
            android:id="@+id/workshop_2_scrim"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#b0cb62ff"
            app:layout_constraintBottom_toBottomOf="@+id/map_workshop_2"
            app:layout_constraintLeft_toLeftOf="@+id/map_workshop_2"
            app:layout_constraintRight_toRightOf="@+id/map_workshop_2"
            app:layout_constraintTop_toTopOf="@+id/map_workshop_2">

            <ImageView
                android:id="@+id/workshop_2_lock"
                style="@style/WorkshopLock"
                android:src="@drawable/icon_lock" />

            <TextView
                android:id="@+id/workshop_2_lock_text"
                style="@style/WorkshopLockText"
                android:layout_below="@+id/workshop_2_lock"
                tools:text="Unlock at level 5" />

        </RelativeLayout>

        <!-- Scrim overlay for workshop 3 (when locked) -->
        <RelativeLayout
            android:id="@+id/workshop_3_scrim"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#b0ff6262"
            app:layout_constraintBottom_toBottomOf="@+id/map_workshop_3"
            app:layout_constraintLeft_toLeftOf="@+id/map_workshop_3"
            app:layout_constraintRight_toRightOf="@+id/map_workshop_3"
            app:layout_constraintTop_toTopOf="@+id/map_workshop_3">

            <ImageView
                android:id="@+id/workshop_3_lock"
                style="@style/WorkshopLock"
                android:src="@drawable/icon_lock" />

            <TextView
                android:id="@+id/workshop_3_lock_text"
                style="@style/WorkshopLockText"
                android:layout_below="@+id/workshop_3_lock"
                tools:text="Unlock at level 7" />

        </RelativeLayout>

        <TextView
            android:id="@+id/text_workshops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:padding="4dp"
            android:text="@string/workshops"
            android:textColor="@color/text_faded"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.Santa.Lobster"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_user_image" />

        <ImageView
            android:id="@+id/arrow_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="16dp"
            android:background="?attr/selectableItemBackground"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/profile_user_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/profile_user_image"
            app:layout_constraintTop_toTopOf="@+id/profile_user_image"
            app:srcCompat="@drawable/ic_keyboard_arrow_left_white_24px" />

        <ImageView
            android:id="@+id/arrow_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="?attr/selectableItemBackground"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/profile_user_image"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/profile_user_image"
            app:srcCompat="@drawable/ic_keyboard_arrow_right_white_24px" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>
