...


        </RelativeLayout>

        <!-- Avatar Image -->
        <ImageView
            android:id="@+id/map_user_image"
            android:layout_width="@dimen/size_avatar_image"
            android:layout_height="@dimen/size_avatar_image"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/left_margin_avatar_image"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
...
        app:backgroundTint="@color/material_green_500"
        app:srcCompat="@drawable/ic_check_white_24px"
        tools:visibility="visible" />

    <!-- Button my location -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        app:backgroundTint="@color/bg_blue"
...
