...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/st_logo_main"
            android:layout_centerHorizontal="true"
            android:focusable="true"
            android:focusableInTouchMode="false"
            android:nextFocusDown="@+id/card_list"
            android:text="@string/track_santa"
            android:visibility="visible" />

        <RelativeLayout
            android:id="@+id/countdown_container"
            android:layout_width="wrap_content"
...
